...
                Text("새로운 할 일 추가")
                    .font(.title)
                    .bold()
                    .foregroundColor(.myTextPrimary)

                VStack(spacing: 16) {
                    TextField("제목", text: $title)
                        .padding()
                        .background(Color.myContainer)
                        .cornerRadius(10)
                        .foregroundColor(.myTextPrimary)

                    TextField("세부 사항", text: $details)
...
                Spacer()

                Button(action: {
                    viewModel.addToDo(title: title, details: details.isEmpty ? nil : details)
                    presentationMode.wrappedValue.dismiss()
                }) {
                    Text("추가하기")
                        .font(.headline)
                        .frame(maxWidth: .infinity)
                        .padding()
                        .background(title.isEmpty ? Color.gray : Color.myDestructive)
                        .foregroundColor(.white)
                        .cornerRadius(10)
...
